# analyze-loudness

./: .gitignore  .gitmodules  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.txt  analyze-loudness.spec  build.py  installer.iss  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
build_assets/: checksums.json  generate_icons.py
docs/: architecture.md  security-audit.md
frontend/: i18n.js  index.html  main.js  style.css  theme.js
frontend/charts/: histogram.js  segments.js  timeline.js
src/analyze_loudness/: __init__.py  __main__.py  analysis.py  cli.py  download.py  gui.py  plot.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_data.json  test_download.py  test_frontend.py  test_gui.py  test_init.py  test_json_safe.py
tests/frontend/: test_ui.html  test_ui.js
