[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyze-loudness"
dynamic = ["version"]
description = "Download YouTube audio and analyze loudness (BS.1770 / EBU R128)"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "yt-dlp",
    "static-ffmpeg",
]

[project.optional-dependencies]
gui = ["pywebview"]
dev = ["pytest", "playwright>=1.40"]

[project.scripts]
analyze-loudness = "analyze_loudness.cli:main"
analyze-loudness-gui = "analyze_loudness.gui:main"

[tool.hatch.version]
path = "src/analyze_loudness/__init__.py"
